--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: generic
+before_deploy:
+- zip zips/src.zip src/helloWorld.py
 deploy:
   provider: s3
   access_key_id: $s3_access_key_id
@@ -6,6 +8,16 @@ deploy:
   bucket: alldredgecraigseniorproject
   local-dir: src
   upload-dir: src
+  region: us-east-1
+  on:
+    repo: AlldredgeCraigSeniorProjectTeam/oral-history
+after_success:
+  provider: s3
+  access_key_id: $s3_access_key_id
+  secret_access_key: $s3_secret_key
+  bucket: alldredgecraigseniorproject
+  local-dir: zips
+  upload-dir: zips
   region: us-east-1
   on:
     repo: AlldredgeCraigSeniorProjectTeam/oral-history
