--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: generic
 before_deploy:
-- zip -j oral_history.zip src/oralHistory.py src/familySearchAPIDecorator.py
+- zip -j oral_history.zip src/oralHistory.py src/familySearchAPIDecorator.py src/customExceptions.py
 - cd ask-sdk
 - zip -r ../oral_history.zip ask_sdk ask_sdk_model-0.3.0.dist-info chardet enum34-1.1.6.dist-info requests typing-3.6.6.dist-info ask_sdk-0.1.3.dist-info boto3 chardet-3.0.4.dist-info futures-3.2.0.dist-info requests-2.19.1.dist-info typing.py ask_sdk_core boto3-1.9.4.dist-info concurrent idna s3transfer typing.pyc ask_sdk_core-0.1.3.dist-info botocore dateutil idna-2.7.dist-info s3transfer-0.1.13.dist-info urllib3 ask_sdk_dynamodb botocore-1.12.4.dist-info docutils jmespath six-1.11.0.dist-info urllib3-1.23.dist-info ask_sdk_dynamodb_persistence_adapter-0.1.3.dist-info certifi docutils-0.14.dist-info jmespath-0.9.3.dist-info six.py ask_sdk_model certifi-2018.8.24.dist-info enum python_dateutil-2.7.3.dist-info six.pyc
 - cd ..
