Updated references to session attributes

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
   access_key_id: $s3_access_key_id
   secret_access_key: $s3_secret_key
   function_name: "oralHistory"
-  zip: oral_history.zip
+  zip: skill.zip
   region: "us-east-1"
   role: "arn:aws:iam::523059797638:role/service-role/oral_history"
   runtime: "python2.7"
