--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ deploy:
   upload-dir: src
   region: us-east-1
   on:
+    branch: master
     repo: AlldredgeCraigSeniorProjectTeam/oral-history
 - provider: lambda
   access_key_id: $s3_access_key_id
@@ -25,3 +26,6 @@ deploy:
   runtime: "python2.7"
   module_name: "oralHistory"
   handler_name: "handler"
+  on:
+    branch: master
+    repo: AlldredgeCraigSeniorProjectTeam/oral-history
